# idpp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  idpp.iss  install.ps1  install.sh  register-idpp.ps1
.github/workflows/: release.yml
contoh/: 01_halo.idpp  02_variabel.idpp  03_kondisi.idpp  04_loop.idpp  06_daftar.idpp
examples/: 01_halo.idpp  03_kondisi.idpp  05_fungsi.idpp  07_kamus.idpp  08_error.idpp  09_operator.idpp  10_atau_jika.idpp  11_perbandingan.idpp  12_http.idpp
examples/impor example/: 13_impor.idpp
examples/impor example/lib/: matematika.idpp
idpp/: Cargo.toml  build.rs
idpp/src/: builtin.rs  cache.rs  compiler.rs  error.rs  network.rs  parser.rs  repl.rs  token.rs
rak/: Cargo.toml
rak/src/: main.rs
src/: ast.rs  bytecode.rs  compiler.rs  environment.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  repl.rs  vm.rs
test/compare_py-idpp/: README.md  fib.idpp  fib.py
tests/: test_interpreter.rs
vscode-extension/: language-configuration.json  package.json
vscode-extension/snippets/: idpp.json
vscode-extension/syntaxes/: idpp.tmLanguage.json
