[workspace]
resolver = "2"
members = [
    "idpp",
    "rak"
]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["KyuzenStudio"]
license = "MIT"
repository = "https://github.com/rillToMe/idpp"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true